# scadlib

./: LICENSE  README.md  bearing.scad  bearingGuide.scad  constructive-tutorial-1-and-2.scad  container.scad  drawer-organizer.scad  drawer-organizer.stl  lenovo-t460-battery-clip.scad  mantle-cap.scad  miter-cabinet.scad  playingCard.scad  printerWorkbench.scad  pyproject.toml  quadcopter-frame.scad  router-cabinet.scad  screws.scad  setCollar.scad  work-gripper.scad
.trunk/: trunk.yaml
cabinet/: back_panel.scad  cabinet.scad  carcas.scad  const.scad  defaults.scad  door.scad  drawer.scad  face.scad  frame.scad  kick_plate.scad  shaker.scad  storage.scad  top.scad  utils.scad
cabinet/faces/: shaker.scad  slab.scad
common/: bearingGuide.scad  cutlist.scad  pipe.scad  pipes.scad  screws.scad  utils.scad
drone/: motor.scad  speedController.scad
exports/stl/: bambu-spool-adapter.stl  bearing.stl  bearingGuide.stl  constructive-tutorial-1-and-2.stl  container.stl  double-dagger.stl  drawer-organizer.stl  lenovo-t460-battery-clip.stl  mantle-cap.stl  miter-cabinet.stl  motor-mount.stl  playing-card.stl  playingCard.stl  printer-workbench.stl  printerWorkbench.stl  router-cabinet.stl  screws.stl  set-collar.stl  setCollar.stl  speed-controller-mount.stl
exports/stl/drone/: motor.stl  (+1 more)
models/: bambu-spool-adapter.scad  constructive-tutorial-1-and-2.scad  double-dagger.scad  motor-mount.scad  router-cabinet.scad  speed-controller-mount.scad
scripts/: convert-webp.sh  export-images.sh  export-stls.sh  exportStls.sh
src/scadlib/: __init__.py  cutlist.py
(+8 files in other folders)
