[project]
name = "scadlib"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Matt White", email = "mail@matt-w.net" }
]
dependencies = ["rich~=13.5.3"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ipdb~=0.13.13", "black~=23.9.1"]
